# spex

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.app  INSTALL.md  Makefile  README.md  ROADMAP.md  TODO.md  cabal.project  cabal.project.freeze  fourmolu.yaml  shell.nix  spex.cabal
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/workflows/: main.yaml
app/: Main.hs
example/: petstore-bad-formatting.spex  petstore-bad-scope.spex  petstore-basic.spex  petstore-modal-faults.spex  petstore.spex
example/experiment/: authentication-jwt.spex  bully-algorithm.spex  guess-game.spex  hangman-game.spex  two-phase-commit.spex
example/petstore/: petstore.cabal
example/petstore-python-flask/: Makefile  petstore.py  shell.nix
example/petstore/app/: Main.hs
example/petstore/src/: Petstore.hs
release/: Dockerfile  Makefile  entrypoint.sh
src/Spex/: Grammar.hs  Lexer.hs  LibMain.hs  Logger.hs  Mock.hs  Monad.hs  Parser.hs  PrettyPrinter.hs  Syntax.hs  TypeChecker.hs  Verifier.hs
src/Spex/CommandLine/: Ansi.hs  ArgParser.hs  GitHash.hs  Option.hs  Spinner.hs
src/Spex/Experiment/: Grammar.hs  Histogram.hs  LinearTemporalLogic.hs  LinearTemporalTestingLogic.hs  Protocol.hs  Protocol2.hs  Protocol3.hs  TimedPropositionalTemporalLogic.hs
src/Spex/Generator/: Arbitrary.hs  Combinator.hs  Prng.hs
src/Spex/Syntax/: Operation.hs  Position.hs  Specification.hs  Type.hs  Value.hs
src/Spex/Verifier/: Coverage.hs  Generator.hs  HealthChecker.hs  HttpClient.hs  Reseter.hs  Result.hs  Shrinker.hs
src/Spex/Verifier/Codec/: Json.hs
src/Spex/Verifier/Generator/: Env.hs
test/: Main.hs
test/golden/: format_example-petstore-bad-formatting.spex.golden  verify_example-petstore-basic.spex_--seed_2503963955766725184.golden  verify_example-petstore-modal-faults.spex_--seed_8800299288541500217.golden  verify_example-petstore-modal-faults.spex_--tests_2000_--seed_3967796076964233976.golden
