cabal-version: 3.0
name:          petstore
version:       0.0.0

-- synopsis:
-- description:
license:       BSD-2-Clause
license-file:  LICENSE
author:        Stevan A
maintainer:    stevana@users.noreply.github.com

-- copyright:
category:      Testing
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Petstore
  build-depends:
    , aeson
    , base            ^>=4.20.0.0
    , servant
    , servant-server
    , warp

  hs-source-dirs:   src
  default-language: Haskell2010

executable petstore
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , petstore

  hs-source-dirs:   app
  default-language: Haskell2010
