cabal-version: 3.0
name:          petstore
version:       0.0.0
synopsis:      Petstore demo application
description:   See README at <https://github.com/spex-lang/spex#readme>
license:       BSD-2-Clause
license-file:  LICENSE
author:        Stevan A
maintainer:    stevana@users.noreply.github.com
copyright:     Copyright (C) 2024, Stevan A
category:      Testing
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Petstore
  build-depends:
    , aeson
    , base
    , bytestring
    , servant
    , servant-server
    , wai
    , warp

  hs-source-dirs:   src
  default-language: Haskell2010

executable spex-demo-petstore
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , petstore

  hs-source-dirs:   app
  default-language: Haskell2010
